--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/public/icon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/public/icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SPD GROUP</title>
+    <link rel="stylesheet" href="/public/css/style.css">
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <!-- <script src="/public/js/script.js"></script> -->
+    <script src="/public/js/swiper-bundle.min.js"></script>
   </body>
 </html>
